--- a/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
+++ b/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
@@ -1,9 +1,13 @@
-<nav class="navbar">
-    <a class="navbar-brand" routerLink="/">
-      <img src="./assets/images/logos/etap.png" alt="logo" class="logo" />
-      Etap Amicale
-    </a>
-    <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="/">
+    <img src="./assets/images/logos/etap.png" alt="logo" class="logo" />
+    Etap Amicale
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
       </li>
@@ -13,10 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/info" routerLinkActive="active">Info</a>
       </li>
-      
       <li class="nav-item">
-        <a class="nav-link btn-signup" routerLink="/authentication/login">Login</a>
+        <a class="nav-link btn btn-primary text-white" routerLink="/authentication/login">Login</a>
       </li>
     </ul>
-  </nav>
-  
+  </div>
+</nav>
