--- a/src/app/pages/ui-components/list-slides/list-slides.component.html
+++ b/src/app/pages/ui-components/list-slides/list-slides.component.html
@@ -1,73 +1,94 @@
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="container-fluid" style="width: 100%">
+  <div class="row">
+    <div class="col-auto">
+      <!-- Button to navigate to AddSlides page -->
+      <a mat-flat-button href="/AddSlides" class="text-white" style="background-color: rgb(83, 172, 83);">
+        <mat-icon>exposure_plus_1</mat-icon>
+        Add Slide
+      </a>
+      <!-- Button to navigate to DeletedSlides page -->
+      <a mat-flat-button href="/deletedSlides" class="text-white" style="background-color: rgb(255, 69, 58);">
+        <mat-icon>recycling</mat-icon>
+        View Deleted Slides
+      </a>
+    </div>
 
-        <!-- Titre Column -->
-        <ng-container matColumnDef="titre">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- Titre Column -->
+      <ng-container matColumnDef="titre">
         <th mat-header-cell *matHeaderCellDef> Title </th>
         <td mat-cell *matCellDef="let element"> {{element.titre}} </td>
-        </ng-container>
-    
-        <!-- Description Column -->
-        <ng-container matColumnDef="description">
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> Description </th>
         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-        </ng-container>
-    
-        <!-- Image Column -->
-        <ng-container matColumnDef="image">
+      </ng-container>
+
+      <!-- Image Column -->
+      <ng-container matColumnDef="image">
         <th mat-header-cell *matHeaderCellDef> Image </th>
         <td mat-cell *matCellDef="let element">
-            <img [src]="element.image" alt="Image" style="width: 100px; height: auto;">
+          <img [src]="element.image" alt="Image" style="width: 100px; height: auto;">
         </td>
-        </ng-container>
-    
-        <!-- Status Column -->
-        <ng-container matColumnDef="status">
+      </ng-container>
+
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
         <td mat-cell *matCellDef="let element"> {{element.status ? 'Active' : 'Inactive'}} </td>
-        </ng-container>
-    
-        <!-- Btn_href Column -->
-        <ng-container matColumnDef="btn_href">
+      </ng-container>
+
+      <!-- Btn_href Column -->
+      <ng-container matColumnDef="btn_href">
         <th mat-header-cell *matHeaderCellDef> Button Link </th>
         <td mat-cell *matCellDef="let element">
-            <a [href]="element.btn_href" target="_blank">{{element.btn_href}}</a>
+          <a [href]="element.btn_href" target="_blank">{{element.btn_href}}</a>
         </td>
-        </ng-container>
-    
-        <!-- Btn_name Column -->
-        <ng-container matColumnDef="btn_name">
+      </ng-container>
+
+      <!-- Btn_name Column -->
+      <ng-container matColumnDef="btn_name">
         <th mat-header-cell *matHeaderCellDef> Button Name </th>
         <td mat-cell *matCellDef="let element"> {{element.btn_name}} </td>
-        </ng-container>
-    
-        <!-- Created Column -->
-        <ng-container matColumnDef="created">
+      </ng-container>
+
+      <!-- Created Column -->
+      <ng-container matColumnDef="created">
         <th mat-header-cell *matHeaderCellDef> Created </th>
         <td mat-cell *matCellDef="let element"> {{element.created | date:'short'}} </td>
-        </ng-container>
-    
-        <!-- Updated Column -->
-        <ng-container matColumnDef="updated">
+      </ng-container>
+
+      <!-- Updated Column -->
+      <ng-container matColumnDef="updated">
         <th mat-header-cell *matHeaderCellDef> Updated </th>
         <td mat-cell *matCellDef="let element"> {{element.updated | date:'short'}} </td>
-        </ng-container>
-    
-        <!-- Deleted Column -->
-        <ng-container matColumnDef="deleted">
+      </ng-container>
+
+      <!-- Deleted Column -->
+      <ng-container matColumnDef="deleted">
         <th mat-header-cell *matHeaderCellDef> Deleted </th>
         <td mat-cell *matCellDef="let element"> {{element.deleted ? (element.deleted | date:'short') : 'N/A'}} </td>
-        </ng-container>
-    
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
-            <button mat-button (click)="deleteSlide(element._id)">Delete</button>
+          <button mat-button class="update-button" (click)="updateSlide(element._id)">
+            <mat-icon>edit</mat-icon> Update
+          </button>
+          <button mat-button class="delete-button" (click)="deleteSlide(element._id)">
+            <mat-icon>delete</mat-icon> Delete
+          </button>
         </td>
-        </ng-container>
-    
-        <!-- Header and Row Definitions -->
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </ng-container>
+      
+
+      <!-- Header and Row Definitions -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    
+  </div>
+</div>
