--- a/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
+++ b/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
@@ -9,10 +9,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+        <a class="nav-link" routerLink="slidesf" routerLinkActive="active">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
+        <a class="nav-link" routerLink="eventsf" routerLinkActive="active">Event</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/info" routerLinkActive="active">Info</a>
