--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<H1>Dashboard</H1>
 <div class="row">
   <!-- --------------------------------------------------------------------------- -->
   <!-- Sales Overview -->
@@ -137,45 +138,7 @@
     </div>
   </div>
 
-  <div class="col-lg-4">
-    <mat-card class="cardWithShadow">
-      <mat-card-content class="p-24">
-        <mat-card-title>Recent Transactions</mat-card-title>
-
-        <div class="timeline m-t-24">
-          <div
-            class="timeline-item d-flex overflow-hidden"
-            *ngFor="let stat of stats"
-          >
-            <div class="time text-right mat-subtitle-1 f-s-14">
-              {{ stat.time }}
-            </div>
-            <div class="point d-flex align-items-center">
-              <span class="timeline-badge border-{{ stat.color }} m-y-8"></span>
-              <span class="timline-border d-block"></span>
-            </div>
-            <div class="desc">
-              <ng-template [ngIf]="stat.subtext">
-                <span class="mat-subtitle-1 f-s-14 lh-20">{{
-                  stat.subtext
-                }}</span>
-              </ng-template>
-              <ng-template [ngIf]="stat.title">
-                <span class="mat-subtitle-1 f-s-14 lh-20 f-w-600 d-block">{{
-                  stat.title
-                }}</span>
-              </ng-template>
-              <ng-template [ngIf]="stat.link">
-                <a href="#" class="text-primary text-decoration-none mat-body-1"
-                  >#ML-3467</a
-                >
-              </ng-template>
-            </div>
-          </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
+ 
 
   <div class="col-lg-8">
     <mat-card class="cardWithShadow">
@@ -291,61 +254,4 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6 col-lg-3" *ngFor="let productcard of productcards">
-    <mat-card class="cardWithShadow productcard overflow-hidden">
-      <a routerLink="/widgets/cards">
-        <img
-          src="{{ productcard.imgSrc }}"
-          alt="imgSrc"
-          class="w-100"
-          mat-card-image
-        />
-      </a>
-      <mat-card-content class="p-b-24 p-t-12 position-relative">
-        <button
-          mat-mini-fab
-          color="primary"
-          class="icon-30 cart-btn"
-          matTooltip="Add to Cart"
-        >
-          <i-tabler name="basket" class="icon-16"></i-tabler>
-        </button>
-        <mat-card-title class="mat-headline-2 f-s-16 m-b-4">{{
-          productcard.title
-        }}</mat-card-title>
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="d-flex align-items-center">
-            <h6 class="mat-body-2 f-w-600">${{ productcard.price }}</h6>
-            <span class="f-s-14 m-l-4 text-decoration-line-through"
-              >${{ productcard.rprice }}</span
-            >
-          </div>
-          <div class="m-l-auto d-flex gap-4">
-            <span
-              ><i-tabler name="star" class="fill-warning icon-18"></i-tabler
-            ></span>
-            <span
-              ><i-tabler name="star" class="fill-warning icon-18"></i-tabler
-            ></span>
-            <span
-              ><i-tabler name="star" class="fill-warning icon-18"></i-tabler
-            ></span>
-            <span
-              ><i-tabler name="star" class="fill-warning icon-18"></i-tabler
-            ></span>
-            <span
-              ><i-tabler name="star" class="fill-warning icon-18"></i-tabler
-            ></span>
-          </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
-</div>
+ 
