--- a/src/app/layouts/Front/user-layout/eventsfront/eventsfront.component.scss
+++ b/src/app/layouts/Front/user-layout/eventsfront/eventsfront.component.scss
@@ -68,3 +68,7 @@ mat-card-actions {
   background-color: #1976d2; /* Slightly darker blue on hover */
   transform: scale(1.05); /* Slight zoom effect */
 }
+h1 {
+  text-align: center; /* Center align the text */
+  
+}
