--- a/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
+++ b/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" [ngClass]="{'scrolled': isScrolled}">
   <a class="navbar-brand" routerLink="/">
     <img src="./assets/images/logos/etap.png" alt="logo" class="logo" />
     Etap Amicale
