--- a/src/app/layouts/Front/user-layout/conventionsfront/conventionsfront.component.html
+++ b/src/app/layouts/Front/user-layout/conventionsfront/conventionsfront.component.html
@@ -1,31 +1,27 @@
-<H1>Conventions</H1>
+<h1 class="text-center">Our Conventions</h1>
 <div *ngIf="errorMessage" class="alert alert-danger">
-    {{ errorMessage }}
-  </div>
-  
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-4" *ngFor="let convention of dataSource.data">
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title">{{ convention.titre }}</h5>
-            <p class="card-text">
-              <strong>Status:</strong> {{ convention.statusConvention }}<br>
-              <strong>Date:</strong> {{ convention.date | date:'shortDate' }}<br>
-              <strong>Type:</strong> {{ convention.type }}
-            </p>
-            <a *ngIf="convention.pdf" [href]="convention.pdf" target="_blank" class="btn btn-primary">
-              View PDF
-            </a>
-            <td>
-                <iframe *ngIf="convention.image"
-                        [src]="getSanitizedUrl(convention.image)"
-                        style="width: 100%; height: 500px; border: none;">
-                </iframe>
-              </td>
+  {{ errorMessage }}
+</div>
+
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-4" *ngFor="let convention of dataSource.data; trackBy: trackById">
+      <div class="card mb-4 card-animated">
+        <div class="card-body">
+          <h5 class="card-title">{{ convention.titre }}</h5>
+          <p class="card-text">
+            <strong>Status:</strong> {{ convention.statusConvention }}<br>
+            <strong>Date:</strong> {{ convention.date | date:'shortDate' }}<br>
+            <strong>Type:</strong> {{ convention.type }}
+          </p>
+          <a *ngIf="convention.pdf" [href]="convention.pdf" target="_blank" class="btn btn-primary btn-sm">
+            View PDF
+          </a>
+          <div *ngIf="convention.sanitizedImage" class="mt-2">
+            <iframe [src]="convention.sanitizedImage" style="width: 100%; height: 300px; border: none;"></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
